Upgrade to Java 15 for tests